--- a/index.html
+++ b/index.html
@@ -13,3 +13,10 @@ layout: default
     </article>
   {% endfor %}
 </div>
+    <div class="wrapper-footer">
+      <div class="container">
+        <footer class="footer">
+          {% include svg-icons.html %}
+        </footer>
+      </div>
+    </div>
