--- a/404.html
+++ b/404.html
@@ -5,4 +5,4 @@ permalink: /404
 comments: false
 ---
 <p>No parece que haya nada aquí. Lo siento por eso.</p>
-<p>Si has seguido un enlace esperando que algo esté aquí, puedes <a href="mailto:{{ site.email }}?subject=Página no encontrada">contáctame</a>.</p>
+<p>Si has seguido un enlace esperando que algo esté aquí, puedes <a href="mailto:{{ site.email }}?subject=Página no encontrada">contáctarme</a>.</p>
