--- a/tools/matriculas_itsc.html
+++ b/tools/matriculas_itsc.html
@@ -4,7 +4,7 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<title>Matriculas ITSC</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-		<style>body{text-align:center;}#body{margin: 0 auto;}</style>
+        <style>body{text-align:center;}#body{margin: 0 auto;}#m{text-transform:uppercase;}</style>
 		<script type="text/javascript">
 		
 		var h = ["5445313330303331", "5445313330303330"];
@@ -51,13 +51,14 @@
 				
 				document.getElementById("img").src = img;
 				document.getElementById("pdf").href = pdf;
+				document.getElementById("m").value = m;
 			};
 		</script>
 	</head>
 	<body>
 		<div id="body">
 			<form method="GET" autocomplete="off">
-				<input type="search" name="m" placeholder="Matr&iacute;cula..." style="text-transform:uppercase;" value="" autocomplete="off" />
+				<input type="search" id="m" name="m" placeholder="Matr&iacute;cula..." autocomplete="off" />
 				<input type="submit" value="ver" />
 			</form>
 			<br>
